--- a/package.json
+++ b/package.json
@@ -9,17 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-sigma/core": "^5.0.2",
+    "@tailwindcss/postcss": "^4.0.9",
     "@types/node": "22.13.6",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
+    "@xyflow/react": "^12.4.4",
     "autoprefixer": "10.4.20",
+    "d3": "^7.9.0",
     "eslint": "9.21.0",
     "eslint-config-next": "15.2.0",
+    "graphology": "^0.25.4",
+    "graphology-types": "^0.24.8",
+    "html-to-image": "^1.11.13",
+    "html2canvas": "^1.4.1",
     "next": "15.2.0",
-    "postcss": "8.5.3",
+    "next-themes": "^0.4.4",
+    "postcss": "^8.5.3",
     "react": "19.0.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "19.0.0",
-    "tailwindcss": "4.0.9",
+    "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5",
+    "sigma": "^3.0.1",
+    "tailwindcss": "^4.0.9",
     "typescript": "5.7.3"
   }
 }
